Fix pricing table's appearance on Firefox

--- a/src/views/pricing/pricing-card/pricing-card.scss
+++ b/src/views/pricing/pricing-card/pricing-card.scss
@@ -95,6 +95,7 @@ main {
 }
 
 table.pricing-table {
+  width: 100%;
   border-collapse: collapse;
 
   tr:not(:first-of-type) {
